# vexen-auth

./: DI_COMPARISON.md  OPENID_INTEGRATION.md  README.md  RECOMMENDED_APPROACH.md  REDIS_CACHE.md  REDIS_FALLBACK.md  example_integration_dependency_injector.py  example_integration_manual_di.py  example_openid_usage.py  example_redis_usage.py  example_usage.py  main.py  pyproject.toml
.github/workflows/: python-publish.yml
vexen_auth/: __init__.py  core.py
vexen_auth/application/dto/: __init__.py  auth_dto.py  base.py  openid_dto.py
vexen_auth/application/service/: __init__.py  auth_service.py  openid_service.py
vexen_auth/application/usecase/: __init__.py
vexen_auth/application/usecase/auth/: __init__.py  auth_usecase_factory.py  login_usecase.py  logout_usecase.py  refresh_token_usecase.py  verify_token_usecase.py
vexen_auth/domain/entity/: __init__.py  auth_token.py  user_credential.py
vexen_auth/domain/provider/: __init__.py  auth_provider_port.py
vexen_auth/domain/repository/: __init__.py  auth_repository_port.py  session_cache_port.py  token_repository_port.py  user_info_port.py
vexen_auth/infraestructure/output/cache/: __init__.py
vexen_auth/infraestructure/output/cache/redis/: __init__.py  redis_session_cache.py
vexen_auth/infraestructure/output/persistence/sqlalchemy/: __init__.py
vexen_auth/infraestructure/provider/: __init__.py  local_auth_provider.py  openid_provider.py
vexen_auth/infraestructure/security/: __init__.py  jwt_handler.py  password_hasher.py
vexen_auth/shared/: __init__.py
vexen_auth/shared/models/: __init__.py
(+13 files in other folders)
