[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vexen_auth"]

[project]
name = "vexen-auth"
version = "0.1.3"
description = "Authentication system with hexagonal architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "albakore", email = "kevink.contacto@gmail.com" }]
dependencies = [
	"sqlalchemy[asyncio]>=2.0.44",
	"asyncpg>=0.29.0",
	"aiosqlite>=0.20.0",
	"greenlet>=3.0.0",
	"pyjwt>=2.8.0",
	"bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.1", "pytest-asyncio>=0.23.0", "ruff>=0.14.7", "mypy>=1.8.0"]
redis = ["redis[hiredis]>=5.0.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4"]
ignore = ["W191"]
